# solarnet_metadata

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CHANGELOG.rst  CODE_OF_CONDUCT.md  README.md  README.rst  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  keyword_issue.md  text-improvement.md
.github/workflows/: codestyle.yml  docs.yml  release.yml  test-release.yml  testing.yml
docs/: api.rst  appendix-1.md  appendix-2.md  appendix-3.md  appendix-4.md  appendix-5.md  appendix-6.md  appendix-7.md  appendix-8.md  appendix-9.md  appendix.rst  citation.rst  conf.py  fits_keyword_list.csv  glossary.rst  index.rst  keyword_processor.py  parta.md  parta_appendices.md  partb.md  partc.md  references.md  requirements.txt  solarnet-emails.txt  solarnet_keyword_list.csv  version_guidelines.rst
docs/_static/: class_new_highlight.css  custom.css  wide_navbar.css
docs/_templates/: appendix-1.md  appendix-2.md  appendix-4.md  appendix-5.md  appendix-6.md  appendix-7.md  appendix-8.md  appendix-9.md  parta.md  partb.md  partc.md
docs/dev-guide/: code_standards.rst  docs.rst  index.rst  maintainer_workflow.rst  tests.rst
docs/source/: appendix-1.md  appendix-2.md  appendix-3.md  appendix-4.md  appendix-5.md  appendix-6.md  appendix-7.md  appendix-8.md  appendix-9.md  parta.md  partb.md  partc.md
docs/user-guide/: acknowledging.rst  index.rst  install_guide.rst  solarnet_keyword_schema.rst  solarnet_schema_customization.rst  templates.rst  validation.rst
docs/whatsnew/: index.rst
solarnet_metadata/: __init__.py  schema.py  util.py  validation.py
solarnet_metadata/data/: SOLARNET_attr_schema.yaml  SOLARNET_global_fits_attr_schema.yaml  SOLARNET_variable_fits_attr_schema.yaml
solarnet_metadata/tests/: test_schema.py  test_validation.py
